改成資料導向顯示，而不是依照顯示產生資料，之後可以優化資料併發，不一筆一筆發

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-TW" data-theme="dark">
+<html lang="zh-TW" data-theme="none">
   <head>
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
